add_organizer_tag

--- a/app/assets/stylesheets/_event.scss
+++ b/app/assets/stylesheets/_event.scss
@@ -48,3 +48,14 @@
   flex-wrap: wrap;
   flex-direction: row;
 }
+
+.organaizer_event {
+  background-color: tomato;
+  color: white;
+  display: inline-block;
+  margin-bottom: 10px;
+}
+
+.event_title_show {
+  margin-left: 20px;
+}
