--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -3,7 +3,12 @@
     <div class='event_show_top'>
       <div class='event_show_left'>
         <h3 class='title  margin-bottom'>タイトル</h1>
-        <p><%= @event.title %></p>
+        <p>
+          <% if current_user.id == @event.organaizer %>
+            <span class='require'>主催</span>
+          <% end %>
+          <span class='event_title_show'><%= @event.title %></span>
+        </p>
         <div class='swiper-container'>
           <div class="swiper-wrapper">
             <% @event.images.each do |image| %>
@@ -56,23 +61,25 @@
           <span class="require"><%= tag %></span>
         <% end %>
 
-        <div class='join_button'>
-          <% if @event.users.count != @event.capacity %>
-            <% if @event.users.include?(current_user) %>
-              <div class='join_delete'>
-                <%= link_to exit_study_group_event_path(@event), method: :delete, remote: true do %>
-                  <p><button class="button-small">参加を取り消す</button></p>
-                <% end %>
-              </div>
-            <% else %>
-              <div class='join'>
-                <%= link_to add_study_group_event_path(@event), method: :post, remote: true do %>
-                  <p><button class="button-small">参加する</button></p>
-                <% end %>
-              </div>
+        <% unless current_user.id == @event.organaizer %>
+          <div class='join_button'>
+            <% if @event.users.count != @event.capacity %>
+              <% if @event.users.include?(current_user) %>
+                <div class='join_delete'>
+                  <%= link_to exit_study_group_event_path(@event), method: :delete, remote: true do %>
+                    <p><button class="button-small">参加を取り消す</button></p>
+                  <% end %>
+                </div>
+              <% else %>
+                <div class='join'>
+                  <%= link_to add_study_group_event_path(@event), method: :post, remote: true do %>
+                    <p><button class="button-small">参加する</button></p>
+                  <% end %>
+                </div>
+              <% end %>
             <% end %>
-          <% end %>
-        </div>
+          </div>
+        <% end %>
       </div>
     </div>
     
