--- a/app/views/top/_event.html.erb
+++ b/app/views/top/_event.html.erb
@@ -1,7 +1,12 @@
 <div class='event'>
   <%= link_to event_path(event.id), data: {turbolinks: false} do %>
     <div class='event_left'>
-      <p　class='event_title'><%= event.title %></p>
+      <p　class='event_title'>
+        <% if current_user.id == event.organaizer %>
+          <span class='organaizer_event'>主催</span>
+        <% end %>
+        <%= event.title %>
+      </p>
       <%= image_tag event.images.first.image.url , width: 300, hight: 300 %>
     </div>
     <div class='event_right'>
