--- a/app/views/top/_event.html.erb
+++ b/app/views/top/_event.html.erb
@@ -2,10 +2,12 @@
   <%= link_to event_path(event.id), data: {turbolinks: false} do %>
     <div class='event_left'>
       <p class='event_title'>
-        <% if current_user.id == event.organaizer %>
-          <span class='organaizer_event'>主催</span>
+        <% if user_signed_in? %>
+          <% if current_user.id == event.organaizer %>
+            <span class='organaizer_event'>主催</span>
+          <% end %>
+          <%= event.title %>
         <% end %>
-        <%= event.title %>
       </p>
       <%= image_tag event.images.first.image.url , width: 300, hight: 300 %>
     </div>
