--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -64,7 +64,7 @@
         <% end %>
 
         <% if user_signed_in? %>
-          <% unless current_user.id == @event.organaizer %>
+          <% if current_user.id != @event.organaizer %>
             <div class='join_button'>
               <% if @event.users.count != @event.capacity %>
                 <% if @event.users.include?(current_user) %>
@@ -82,6 +82,8 @@
                 <% end %>
               <% end %>
             </div>
+          <% else %>
+            <%= link_to 'イベントを編集', edit_event_path(@event) %>
           <% end %>
         <% end %>
       </div>
