--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -48,9 +48,9 @@
         <div class="field">
           <%= f.label :image, class: "field_label" %>
           <span class="require">必須</span>
+          <% binding.pry %>
           <%= f.fields_for :images do |i| %>
             <p><%= i.file_field :image %></p>
-            <%= i.hidden_field :image_cache %>
           <% end %>
         </div>
 
