--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,4 +14,5 @@
 @import "event_show";
 @import "user_show";
 @import "event_index";
-@import "error_message"
+@import "error_message";
+@import "flash_message";
