delete_binding.pry2

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -20,10 +20,10 @@
       <p>参加勉強会</p>
     </li>
     <li class='user_menu_item'>
-      <p>フォロー</p>
+      <p class='follow'>フォロー</p>
     </li>
     <li class='user_menu_item'>
-      <p>フォロワー</p>
+      <p class='follower'>フォロワー</p>
     </li>
   </ul>
 
